jupyterhub/nginxDeamon/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-svc
  namespace: jupyterhub
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
#  - name: http
#    port: 80
#    protocol: TCP
#    targetPort: http
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
